refactor posts service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "baseUrl": "./",
     /* ここの設定を追加します。 */
     "paths": {
-      "@firebase/*": ["src/firebase/*"]
+      "@firebase/*": ["src/firebase/*"],
+      "@custom-types/*": ["src/types/*"]
     },
     /* ここ以下は全部一緒 */
     "outDir": "./dist/out-tsc",
