--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "firebase": "^9.12.1",
+    "marked": "^4.1.1",
     "rxjs": "~7.5.0",
+    "sanitize-html": "^2.7.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -29,6 +31,8 @@
     "@angular/cli": "~14.2.5",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "@types/marked": "^4.0.7",
+    "@types/sanitize-html": "^2.6.2",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
