--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "firebase": "^9.12.1",
+    "lit-markdown-editor": "^2.3.0",
     "marked": "^4.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
