--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Angular Deploy gh-pages Actions
+      - uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2
       - run: yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
