--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,8 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Angular Deploy gh-pages Actions
-      - uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2
-      - run: yarn build
+      - run: yarn install && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
